Fix broken Bootstrap .collapse .well on profile page

--- a/web/sass/_bootstrap-settings.scss
+++ b/web/sass/_bootstrap-settings.scss
@@ -65,4 +65,3 @@ $navbar-default-link-color: $gray-darker;
 $navbar-default-link-hover-color: $gray;
 
 // Wells
-$well-bg: lighten($body-bg, 5%);
